Fix rotates overflow scroll

--- a/style.css
+++ b/style.css
@@ -6,17 +6,28 @@ body {
 
 body, button {
   font-family: 'Oswald', sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  overflow: hidden;
+  display: block;
+  width: 100%;
 }
 
 .logo {
   display: block;
   margin: 2em auto;
-  max-width: 80%;
   position: relative;
-  width: 320px;
-  height: 320px;
+  width: 360px;
+  height: 360px;
+  max-width: 70%;
+  box-sizing: border-box;
   transition: transform 0.3s;
 }
+
+
 
 .logo:hover {
   transform: scale(1.2) rotate(5deg);
@@ -128,7 +139,7 @@ body, button {
   background-size: cover;
   width: 300px;
   height: 300px;
-  max-width: 80vw;
+  max-width: 70vw;
   transition: filter 0.3s cubic-bezier(0.5, 0, 0.07, 1), transform 0.3s;
 }
 
@@ -206,7 +217,7 @@ footer .copyright a:hover {
   height: auto;
   max-width: 96%;
   background-color: white;
-  background: url("img/popup_bg.png");
+  background: url("img/popup_bg.png") white;
 }
 /* About popup */
 
@@ -217,10 +228,10 @@ footer .copyright a:hover {
 
 /* TODO Restart animation when open popup */
 #about_popup .popup_inner {
-  animation: about_popup_show 0.6s 1 cubic-bezier(0.68, 0, 0.265, 1.55) ;
+  animation: about_popup_show 0.6s 1 cubic-bezier(0.68, 0, 0.265, 1.2) ;
 }
 @keyframes about_popup_show {
-  0% {transform: rotate(-15deg) scale(0.4) translateY(150px); opacity: 0.4;}
+  0% {transform: rotate(-7deg) scale(0.4) translateY(150px); opacity: 0.4;}
   100% {transform: rotate(0) scale(1) translateY(0); opacity: 1;}
 }
 
